# rust_finn_api

./: Cargo.toml  data.json
src/: api.rs  main.rs  params.rs  response.rs  search_keys.rs
