[package]
name = "rust_finn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.5.1"
json = "0.12.4"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
